# dot-game-center

./: .gitignore  AGENTS.md  LICENSE  README.md  dgc.bat  dgc.spec  install.ps1  pyproject.toml  release.ps1  setup.ps1  summary.md
.github/workflows/: release.yml
src/dgc/: __init__.py  __main__.py  app.py  sound.py  speech.py
src/dgc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dgc/games/: README.md  __init__.py  backgammon.py  battleship.py  checkers.py  chess.py  chess_game.py  connect4.py  fifteen_puzzle.py  helpers.py  puzzle.py  puzzle15.py  tictactoe.py  utils.py
src/dgc/games/helpers/: __init__.py  render_helpers.py
tests/: test_games_smoke.py
