[project]
name = "dgc"
version = "0.1.0"
description = "Dot Game Center (wxPython + DotPad)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "accessible-output2>=0.17",
    "wxPython>=4.2",
]

[project.scripts]
dgc = "dgc.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
