[project]
name = "dgc"
version = "0.1"
description = "Dot Game Center (wxPython + DotPad)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "accessible-output2>=0.17",
    "miniaudio>=1.61",
    "wxPython>=4.2",
]

[project.scripts]
dgc = "dgc.app:main"

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
